# idea

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
assets/: depleted_network.html  enriched_network.html  example_network.html  mixed_network.html
docs/: .gitignore  api.md  conf.py  index.md  requirements.txt  usage.md
docs/recipes/: depleted.md  enriched.md  mixed.md
docs/source/: api.md  conf.py  index.md  installation.md  usage.md
docs/source/api/: gsea.md  index.md  network.md
docs/source/recipes/: depleted.md  enriched.md  index.md  mixed.md
idea/: __init__.py  _constants.py  _go.py  _idea.py  _utils.py
