[tool.poetry]
name = "idea-bio"
version = "0.1.4"
description = "Integrated Differential Expression and Annotation"
authors = ["Noam Teyssier"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "idea" }
]
repository = "https://github.com/noamteyssier/idea"
keywords = ["bioinformatics", "differential expression", "annotation", "networks"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
pandas = "^2.0.3"
networkx = "^3.1"
pyvis = "^0.3.2"
ggetrs = "^0.1.73"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
